fixes overlap on mobile - increase jumbo height

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,5 +1,5 @@
 .jumbo {
-  height: 60vh;
+  height: 70vh;
 }
 
 .jumbo h1 {
